# motionvation-project

./: LICENSE  Procfile  README.md  alembic.ini  distribution of tasks in a group.txt  main.py  pyproject.toml  requirements.txt
Project/: __main__.py  application.py
alembic/: env.py
motionvation/: __main__.py  application.py  challenge_generator.py  exp_calculator.py  get_xp_calculation.py  perform_challenge.py  xp.py
motionvation/data/: db_session.py
motionvation/data/models/: __init__.py  categories.py  challenges.py  news.py  notes.py  tasks.py  users.py
motionvation/db/: motionvation.db
motionvation/forms/: __init__.py  category_form.py  change_info_form.py  change_news_form.py  change_note_form.py  change_password_form.py  change_task_form.py  login_form.py  news_form.py  notes_form.py  register_form.py  resgister_form.py  task_form.py
motionvation/static/css/: awesome_design.css  awesome_design2.css  awesome_design3.css  classique_design.css  classique_design2.css  cstyle.css  kstyle.css  multi_design.css  red_beast_design.css  style.css  (+18 more)
motionvation/templates/: account.html  add_category.html  add_news.html  add_note.html  add_task.html  base.html  categories.html  challenge.html  challenges.html  change_info.html  change_news.html  change_note.html  change_password.html  change_task.html  change_task_category.html  contactus.html  error.html  login.html  main.html  music_player.html  news.html  news_info.html  notes.html  notes_info.html  nothing.html  planger.html  register.html  select_category.html  settings.html  task_info.html  tasks.html
