[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Vladislav <cypepv@yandex.ru>"]
description = ""
name = "motionvation-project"
version = "0.1.0"
[tool.poetry.dependencies]
flask = "^1.1"
flask-login = "^0.5.0"
flask-wtf = "^0.14.3"
python = "^3.7"
sqlalchemy = "^1.3"
werkzeug = "^1.0"
wtforms = "^2.2"
SQLAlchemy-serializer = "^1.3"
psycopg2 = "^2.8"
requests = "^2.23"
Flask-RESTful = "^0.3.8"
alembic = "^1.4"
[tool.poetry.dev-dependencies]
